--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -42,10 +42,10 @@
 					Absences
 				</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<a class="dropdown-item" href="">
+					<a class="dropdown-item" href="{{ path('absences_index') }}">
 						<i class="fa fa-list"></i>
 						Liste</a>
-					<a class="dropdown-item" href="">
+					<a class="dropdown-item" href="{{ path('absences_new') }}">
 						<i class="fa fa-plus-circle"></i>
 						Ajouter une absence</a>
 				</div>
