--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -15,10 +15,12 @@
 			<h5 class="card-title">{{ app.user.prenom|capitalize }}
 				{{ app.user.nom|capitalize }}</h5>
 		</div>
+
 		<div class="card-footer bg-white">
 			<a href="{{ path('employe_edit', {id: app.user.id}) }}" class="btn align-self-end btn-primary">Modifier mon profil</a>
 		</div>
 	</div>
+
 	<div class="card" style="width: 18rem;">
 		<img class="card-img-top" src="..." alt="pas d'image">
 		<div class="card-body">
@@ -30,9 +32,9 @@
 			<div class="card-footer bg-white">
 				<a href="{{ path('employe_edit', {id: app.user.id}) }}" class="btn align-self-end btn-primary">Signaler une absence</a>
 			</div>
-		</div>
+	</div>
 
-		<div class="card" style="width: 18rem;">
+	<div class="card" style="width: 18rem;">
 			<div class="card-body">
 				<h5 class="card-title">Mes documents</h5>
 				<table class="table">
@@ -61,8 +63,6 @@
 			</div>
 			<div class="card-footer bg-white">
 				<a href="{{ path('documents_new', {id: app.user.id}) }}" class="btn align-self-end btn-primary">Partager un document</a>
-			</p>
-		</a>
 	</div>
-</div></div>{% endblock %}
- 
+	</div>
+</div>{% endblock %} 
