--- a/templates/absences/_form.html.twig
+++ b/templates/absences/_form.html.twig
@@ -1,4 +1,4 @@
 {{ form_start(form) }}
 {{ form_widget(form) }}
-<button class="btn btn-success">{{ button_label|default('Enregistrer') }}</button>
+<button class="btn btn-success rounded-pill">{{ button_label|default('Enregistrer') }}</button>
 {{ form_end(form) }}
