--- a/templates/documents/edit.html.twig
+++ b/templates/documents/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('documents/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('documents_index') }}">back to list</a>
+    <a class='btn rounded-pill btn-secondary' href="{{ path('documents_profil') }}">Retour à la liste</a>
 
     {{ include('documents/_delete_form.html.twig') }}
 {% endblock %}
