--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -1,9 +1,10 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	<a class="navbar-brand" href="{{ path('profil_index') }}">Accueil</a>
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+{# <nav class="navbar navbar-expand-lg navbar-dark menu">
+	<i class="fas fa-bars" id="burgerclick"></i>
+	<a class="navbar-brand" href="{{ path('profil_index') }}"><img src="images/images_front/logosombre.png" alt="" style="width:50px;"></a>
+	{# <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
-	</button>
-	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+	</button> #}
+	{#  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<ul class="navbar-nav mr-auto">
 
 			{% if app.user %}
@@ -12,15 +13,15 @@
 						<a class="nav-link" href="{{ path('app_login') }}">
 							<i class="fa fa-sign-in-alt"></i>
 							Connexion</a>
-					</li>
-					<li class="nav-item">
+					</li> #}
+					{# <li class="nav-item">
 						<a class="nav-link" href="{{ path('app_register') }}">
 							<i class="fa "></i>
 							Inscription</a>
-					</li>
-			{% endif %}
-			{# {% if is_granted('ROLE_ADMIN') %} #}
-			<li class="nav-item dropdown">
+					</li> #}
+			{# {% endif %}   #}  
+			 {# {% if is_granted('ROLE_ADMIN') %}  #}
+			{# <li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					<i class="fa fa-user-friends"></i>
 					Employés
@@ -33,10 +34,10 @@
 						<i class="fa fa-plus-circle"></i>
 						<span class="dropdownMenu">Ajouter un employé</span></a>
 				</div>
-			</li>
+			</li> #}
 			{# {% endif %} #}
 			{# {% if (is_granted('ROLE_BIBLIO')) or (is_granted('ROLE_ADMIN')) %} #}
-			<li class="nav-item dropdown">
+			{# <li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					<i class="fa fa-book"></i>
 					Absences
@@ -49,10 +50,10 @@
 						<i class="fa fa-plus-circle"></i>
 						<span class="dropdownMenu">Ajouter une absence</span></a>
 				</div>
-			</li>
+			</li> #}
 			{# {% endif %} #}
 			{# {% if (is_granted('ROLE_BIBLIO')) or (is_granted('ROLE_ADMIN')) %} #}
-			<li class="nav-item dropdown">
+			{# <li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					<i class="fa fa-pizza-slice"></i>
 					Documents
@@ -68,15 +69,15 @@
 			</li>
 		</div>
 		<div
-			class="collapse navbar-collapse ml-auto" id="navbarSupportedContent">
+			class="collapse navbar-collapse ml-auto" id="navbarSupportedContent"> #}
 			{# {% endif %} #}
-			{% if app.user %}
+			 {# {% if app.user %}
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							<img src="/images/photo_profil/{{ app.user.photo }}" alt="" style="width:50px">
-							<i class="fa fa-user"></i>
-							{{ app.user.prenom|capitalize }}
+							<img src="/images/photo_profil/{{ app.user.photo }}" alt="" class="rounded-circle photoMenu">  #}
+							{# <i class="fa fa-user"></i> #}
+							{# {{ app.user.prenom|capitalize }}
 							{{ app.user.nom|capitalize }}
 
 							<img src="" alt="">
@@ -94,7 +95,47 @@
 						</div>
 					</li>
 				</ul>
-			{% endif %}
-		</ul>
+			 {% endif %}  #}
+		{# </ul> #}
+	{#</div> 
+</nav> #}
+<div class="header row">
+
+	<div class="col-2 ml-2 mt-3">
+		<i class="fas fa-bars" id="burgerclick"></i>
 	</div>
-</nav>
+
+	<div class="row justify-content-between col-10">
+
+		<div class="col-2">
+			<a class="navbar-brand" href="{{ path('profil_index') }}"><img src="images/images_front/logosclair.png" alt="rrr" style="width:50px;"></a>
+		</div>
+	
+		<div class="col-2 pl-2 mt-2">
+			{% if app.user %}
+						
+							<a class="dropdown-toggle text-decoration-none text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								<img src="/images/photo_profil/{{ app.user.photo }}" alt="" class="rounded-circle photoMenu"> 
+								{# <i class="fa fa-user"></i> #}
+								{{ app.user.prenom|capitalize }}
+								{{ app.user.nom|capitalize }}
+		
+								<img src="" alt="">
+							</a>
+							<div class="dropdown-menu my-2 my-lg-0" 							aria-labelledby="navbarDropdown">
+		
+									<a class="dropdown-item" href="{{ path('employe_edit', {id: app.user.id}) }}"><i class="fa fa-cog"></i>
+										Préférences
+									</a>
+									
+									<a class="dropdown-item" href="{{ path('app_logout') }}">
+										<i class="fa fa-sign-out-alt"></i>
+										Déconnexion
+									</a>
+	
+							</div>
+							
+			{% endif %}
+		</div> 
+	</div>
+</div>
