--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,67 +4,73 @@
 	Connexion
 {% endblock %}
 
+
 {% block body %}
-	<div class="connexionContainer">
-		{# <div class="container"> #}
-			{% if error %}
-				<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-			{% endif %}
-	
-			{% if app.user %}
-				<div class="mb-3">
-					You are logged in as
-					{{ app.user.username }},
-					<a href="{{ path('app_logout') }}">Logout</a>
-				</div>
-			{% endif %}
-			<div class="d-flex justify-content-center h-100 connexion">
-				<div class="centrerHauteur">
-					<div class="profil">
-						<div><img src="images/images_front/profil.png" alt="image profil" class="imgProfilConnexion"></div>
-						<h3>Connexion</h3>
-					</div>
-					<div class="card-body">
-						<div class="formHautConnexion">
-							<form method='post'>
-								<div class="input-group form-group">
-									<div class="input-group-prepend">
-										<span class="input-group-text">
-											<i class="fas fa-user"></i>
-										</span>
-									</div>
-									<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+	<div id="connexionBg">
+		
+			<div class="connexionContainer">
+				
+					{% if error %}
+						<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+					{% endif %}
+			
+					{% if app.user %}
+						<div class="mb-3">
+							Vous êtes connecté en tant que
+							{{ app.user.username }},
+							<a href="{{ path('app_logout') }}">Déconnexion</a>
+						</div>
+					{% endif %}
+						
+					<div class="d-flex justify-content-center h-100 connexion">
+						<div class="centrerHauteur">
+							<div class="profil">
+								<div><img src="images/images_front/profil.png" alt="image profil" class="imgProfilConnexion"></div>
+								<h3>Connexion</h3>
+							</div>
+							<div class="card-body">
+								<div class="formHautConnexion">
+									<form method='post'>
+										<div class="input-group form-group">
+											<div class="input-group-prepend">
+												<span class="input-group-text">
+													<i class="fas fa-user"></i>
+												</span>
+											</div>
+											<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+										</div>
+										<div class="input-group form-group">
+											<div class="input-group-prepend">
+												<span class="input-group-text">
+													<i class="fas fa-key"></i>
+												</span>
+											</div>
+											<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+											<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+										</div>
+										<div class="row align-items-center remember">
+											<input type="checkbox"> Se souvenir de moi
+										</div>
+										<div class="form-group">
+											<input type="submit" value="Se connecter" class="btn float-right couleurBoutonConnexion">
+										</div>
+									</form>
 								</div>
-								<div class="input-group form-group">
-									<div class="input-group-prepend">
-										<span class="input-group-text">
-											<i class="fas fa-key"></i>
-										</span>
-									</div>
-									<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-									<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+							</div>
+							<div class="card-footer noCompte">
+								<div class="d-flex justify-content-center links">
+									Vous n'avez pas de compte?<a href="#" class="link"> Inscrivez-vous là</a>
 								</div>
-								<div class="row align-items-center remember">
-									<input type="checkbox"> Se souvenir de moi
+								<div class="d-flex justify-content-center">
+									<a href="#" class="link">Mot de passe oublié?</a>
 								</div>
-								<div class="form-group">
-									<input type="submit" value="Se connecter" class="btn float-right couleurBoutonConnexion">
-								</div>
-							</form>
+							</div>
 						</div>
 					</div>
-					<div class="card-footer noCompte">
-						<div class="d-flex justify-content-center links">
-							Vous n'avez pas de compte?<a href="#" class="link"> Inscrivez-vous là</a>
-						</div>
-						<div class="d-flex justify-content-center">
-							<a href="#" class="link">Mot de passe oublié?</a>
-						</div>
-					</div>
-				</div>
+		
 			</div>
-		{# </div> #}
-	</div>
+	</div>	
+	
 
 	{# <form method="post">
 				{% if error %}
@@ -103,5 +109,9 @@
 					Sign in
 				</button>
 			</form> #}
+	
 {% endblock %}
 
+{% block nav %}
+		
+{% endblock %}
