--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,7 +5,8 @@
 		<meta charset="UTF-8">
 
 		<title>
-			{% block title %}Welcome!{% endblock %}
+			{% block title %}Welcome!
+			{% endblock %}
 		</title>
 
 		{% block stylesheets %}
@@ -25,24 +26,23 @@
 	<body>
 
 		{% block nav %}
-				<div>{% include "menu.html.twig" %}</div>
+			<div>{% include "menu.html.twig" %}</div>
 		{% endblock %}
 
-		<div class="container-fluid"> 
+		<div class="container-fluid">
 
-				<div class="row menuGauche">
-					<div class="col-2 m-0 p-0 blockMenu">
-						{% block menu %}
-							{% include "sidemenu.html.twig" %}
-						{% endblock %}
-					</div> 
-					<div class="col-10 p-0">
+			<div class="row">
 
-						<div class="p-3">{% block body %}{% endblock %}</div>
-						
+				{% block menu %}
+					{% include "sidemenu.html.twig" %}
+				{% endblock %}
+
+				<div class="col p-0">
+					{% block body %}{% endblock %}
 					</div>
-				</div>
 
-		</div>
-	</body>
+				</div>
+			</div>
+		</body>
 	</html>
+</div></body></html>
