--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -6,127 +6,125 @@
 
 {% block menu %}{% endblock %}
 
+
 {% block body %}
-{% if error %}
-			<div class="mb-3">
-				Vous êtes actuellement connecté
-				{{ app.user.username }},
-				<a href="{{ path('app_logout') }}">Déconnexion</a>
-			</div>
-		{% endif %}
-		{% if app.user %}
-		<div class="d-flex justify-content-center h-100">
-			<div class="card">
-				<div class="card-header">
-					<h3>Connexion</h3>
+	<div id="connexionBg">
+
+		<div class="connexionContainer">
+			{% if error %}
+				<div class="mb-3">
+					Vous êtes actuellement connecté
+					{{ app.user.username }},
+					<a href="{{ path('app_logout') }}">Déconnexion</a>
 				</div>
-				<div class="card-body">
-					<form method='post'>
-						<div class="input-group form-group">
-							<div class="input-group-prepend">
-								<span class="input-group-text">
-									<i class="fas fa-user"></i>
-								</span>
-							</div>
-							<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+			{% endif %}
+			{% if app.user %}
+				<div class="d-flex justify-content-center h-100">
+					<div class="card">
+						<div class="card-header">
+							<h3>Connexion</h3>
 						</div>
-					{% endif %}
-						
-					<div class="d-flex justify-content-center h-100 connexion">
-						<div class="centrerHauteur">
-							<div class="profil">
-								<div><img src="images/images_front/profil.png" alt="image profil" class="imgProfilConnexion"></div>
-								<h3>Connexion</h3>
-							</div>
-							<div class="card-body">
-								<div class="formHautConnexion">
-									<form method='post'>
-										<div class="input-group form-group">
-											<div class="input-group-prepend">
-												<span class="input-group-text">
-													<i class="fas fa-user"></i>
-												</span>
-											</div>
-											<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-										</div>
-										<div class="input-group form-group">
-											<div class="input-group-prepend">
-												<span class="input-group-text">
-													<i class="fas fa-key"></i>
-												</span>
-											</div>
-											<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-											<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-										</div>
-										<div class="row align-items-center remember">
-											<input type="checkbox"> Se souvenir de moi
-										</div>
-										<div class="form-group">
-											<input type="submit" value="Se connecter" class="btn float-right couleurBoutonConnexion">
-										</div>
-									</form>
+						<div class="card-body">
+							<form method='post'>
+								<div class="input-group form-group">
+									<div class="input-group-prepend">
+										<span class="input-group-text">
+											<i class="fas fa-user"></i>
+										</span>
+									</div>
+									<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
 								</div>
-							</div>
-							<div class="card-footer noCompte">
-								<div class="d-flex justify-content-center links">
-									Vous n'avez pas de compte?<a href="#" class="link"> Inscrivez-vous là</a>
+							{% endif %}
+
+							<div class="d-flex justify-content-center h-100 connexion">
+								<div class="centrerHauteur">
+									<div class="profil">
+										<div><img src="images/images_front/profil.png" alt="image profil" class="imgProfilConnexion"></div>
+										<h3>Connexion</h3>
+									</div>
+									<div class="card-body">
+										<div class="formHautConnexion">
+											<form method='post'>
+												<div class="input-group form-group">
+													<div class="input-group-prepend">
+														<span class="input-group-text">
+															<i class="fas fa-user"></i>
+														</span>
+													</div>
+													<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+												</div>
+												<div class="input-group form-group">
+													<div class="input-group-prepend">
+														<span class="input-group-text">
+															<i class="fas fa-key"></i>
+														</span>
+													</div>
+													<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+													<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+												</div>
+												<div class="row align-items-center remember">
+													<input type="checkbox">
+													Se souvenir de moi
+												</div>
+												<div class="form-group">
+													<input type="submit" value="Se connecter" class="btn float-right couleurBoutonConnexion">
+												</div>
+											</form>
+										</div>
+									</div>
+									<div class="card-footer noCompte">
+										<div class="d-flex justify-content-center">
+											<a href="#" class="link">Mot de passe oublié?</a>
+										</div>
+									</div>
 								</div>
-								<div class="d-flex justify-content-center">
-									<a href="#" class="link">Mot de passe oublié?</a>
-								</div>
-							</div>
+							</form>
 						</div>
-					</form>
+
+						</div>
+					</div>
 				</div>
-				<div class="card-footer">
-					<div class="d-flex justify-content-center">
-						<a href="#">Mot de passe oublié ?</a>
-					</div>
-		
 			</div>
-	</div>	
-	
+		</div>
 
-	{# <form method="post">
-				{% if error %}
-					<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-				{% endif %}
-		
-				{% if app.user %}
-					<div class="mb-3">
-						You are logged in as
-						{{ app.user.username }},
-						<a href="{{ path('app_logout') }}">Logout</a>
-					</div>
-				{% endif %}
-		
-				<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-				<label for="inputEmail">Email</label>
-				<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-				<label for="inputPassword">Password</label>
-				<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-		
-				<input
-				type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"> #}
+		{# <form method="post">
+									{% if error %}
+										<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+									{% endif %}
+							
+									{% if app.user %}
+										<div class="mb-3">
+											You are logged in as
+											{{ app.user.username }},
+											<a href="{{ path('app_logout') }}">Logout</a>
+										</div>
+									{% endif %}
+							
+									<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+									<label for="inputEmail">Email</label>
+									<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+									<label for="inputPassword">Password</label>
+									<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+							
+									<input
+									type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"> #}
 
-{#
-						        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-						        See https://symfony.com/doc/current/security/remember_me.html
-						
-						        <div class="checkbox mb-3">
-						            <label>
-						                <input type="checkbox" name="_remember_me"> Remember me
-						            </label>
-						        </div>
-						    #}
+	{#
+									        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+									        See https://symfony.com/doc/current/security/remember_me.html
+									
+									        <div class="checkbox mb-3">
+									            <label>
+									                <input type="checkbox" name="_remember_me"> Remember me
+									            </label>
+									        </div>
+									    #}
 
-	{# <button class="btn btn-lg btn-primary" type="submit">
-					Sign in
-				</button>
-			</form> #}
-	
-{% endblock %}
+		{# <button class="btn btn-lg btn-primary" type="submit">
+										Sign in
+									</button>
+								</form> #}
 
-{% block nav %}
-		
-{% endblock %}
+	{% endblock %}
+
+	{% block nav %}{% endblock %}
