--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,6 +3,8 @@
 	<head>
 
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
 
 		<title>
 			{% block title %}Welcome!
@@ -37,12 +39,11 @@
 					{% include "sidemenu.html.twig" %}
 				{% endblock %}
 
-				<div class="col p-0">
+				<div class="container col p-0">
 					{% block body %}{% endblock %}
-					</div>
-
 				</div>
+
 			</div>
+		</div>
 		</body>
 	</html>
-</div></body></html>
