--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,15 +1,6 @@
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 @import "~bootstrap/scss/bootstrap";
 
-:root{
-  --main-color1: #e2f0f9;
-  --main-color2: #b0DDe4;
-  --main-color3: #2eacd6;
-  --main-color4: #286fb4;
-  --main-color5: #ffffff;
-  --main-color6: #df4c73;
-}
-
 /*
 font-family: 'Montserrat', sans-serif;
 font-family: 'Roboto', sans-serif;
@@ -22,12 +13,8 @@ $color4: #286fb4;
 $color5: #ffffff;
 $color6: #df4c73;
 
-$couleur1: #0a2351;
-$couleur2: #00BFFF;
-$couleur3: #00FFFF;
-$couleur4: #F1F1F3;
-$couleur5: #ffffff;
-$couleur6: #FF033E;
+$color7:  rgba(255, 255, 255, 1);
+$color8: rgba(255, 255, 255, 0);
 
 // Polices:
 $police1:'News Cycle', sans-serif;
@@ -50,13 +37,22 @@ body {
 }
 h1{
   font-size: 28px;
-  color: $couleur1;
+  color: $color4;
   margin: 0;
   padding: 0;
 }
+.bgc-pink{
+  background-color: $color6;
+  color: $color5;
+}
+.btnConnexion:hover{
+  background-color: $color5;
+  color: $color6;
+  border: solid 2px $color6;
+}
 /*    --   - Navbar -   --    */
 .menu{
-  background-color: $couleur5;
+  background-color: $color3;
 }
 
 .photoMenu{
@@ -67,10 +63,10 @@ h1{
   color: $color4;
 }
 .dropdownMenu i{
-  color: $couleur1;
+  color: $color1;
 }
 .dropdownMenu{
-  color: $couleur1;
+  color: $color1;
 }
 /*    --   - Fin Navbar - --     */
 .no-padding > [class*='col-'] {
@@ -79,11 +75,11 @@ h1{
   }
 thead{
   background-color: $color4;
-  color: #ffffff;
+  color: $color5;
 }
 .link{
+  color: $color6;
   text-decoration: none;
-  color: #FF033E;
 }
 /* ------------------ Base.html.twig -------------------- */
 
@@ -112,11 +108,11 @@ thead{
   border-bottom: 1px solid $color1;
 }
 .iconMenu i:hover{
-  color: grey;
+  color: $color6;
 }
 .istylehome{
   background-color: $color1;
-  color: $couleur6 !important;
+  color: $color6 !important;
 }
 
 
@@ -133,7 +129,7 @@ thead{
   color: $color5;
 }
 .logoheader a{
-  color: white !important;
+  color: $color5 !important;
   z-index: 100;
 }
 
@@ -144,15 +140,27 @@ thead{
 /* ------------------ employe-> login.html.twig ------------------ */
 
 #connexionBg{
-  background-image: url(../../public/images/images_front/slide3.jpg);
+  // background-image: url(../../public/images/images_front/background.jpg);
   width: 100%;
   min-height: 100vh;
   top: 0 !important;
   position: absolute;
-  z-index: 1;
+  // z-index: 1;
 }
+
+.bg-image {
+  background-image: url(../../public/images/images_front/background.jpg);
+  filter: blur(8px);
+  -webkit-filter: blur(32px);
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
 .connexion{
-  color: $couleur5;
+  color: $color6;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -160,7 +168,7 @@ thead{
 .connexionContainer{
   width: 650px;
   height: 400px;
-  background-image: linear-gradient(to top, rgba(255,0,0,0), rgba(40,111,180,1));
+  background-image: linear-gradient(to top, $color8, $color7);
   margin: 160px auto;
   border-radius: 10px;
   z-index: 100;
@@ -175,9 +183,7 @@ thead{
 .profil{
   text-align: center;
 }
-.couleurBoutonConnexion{
-  color: white;
-}
+
 .imgProfilConnexion{
   height: 80px;
   width: 80px;
@@ -221,7 +227,7 @@ thead{
 }
 .buttonNew{
   margin-top: 10px;
-  background-color: $couleur6;
+  background-color: $color6;
   border: none;
   box-shadow: 1px 1px 12px black;
   margin-left: 20px;
@@ -233,7 +239,7 @@ thead{
   margin-top: 10px;
   box-shadow: 1px 1px 12px black;
   margin-right: 20px;
-  background-color: $couleur1;
+  background-color: $color1;
   border: none;
 }
 .formulaire{
@@ -269,8 +275,8 @@ thead{
   display: flex;
 }
 .cardBody{
-  height: 140px;
   font-size: 12px;
+  min-height: 30vh;
 }
 h5{
   font-size: 15px;
@@ -295,3 +301,10 @@ h5{
 
 }
 
+
+
+/* 
+Login :
+Se connect -> bouton rose écriture blanche
+Connexion -> écriture blanche
+*/
