--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -8,8 +8,10 @@
 
 
 {% block body %}
-	<div id="connexionBg">
 
+
+	<div class="bg-image"></div>
+	<div id="connexionBg">
 		<div class="connexionContainer">
 			{% if error %}
 				<div class="mb-3">
@@ -20,7 +22,9 @@
 			{% endif %}
 			{% if app.user %}
 				<div class="d-flex justify-content-center h-100">
+
 					<div class="card">
+
 						<div class="card-header">
 							<h3>Connexion</h3>
 						</div>
@@ -37,7 +41,7 @@
 							{% endif %}
 
 							<div class="d-flex justify-content-center h-100 connexion">
-								<div class="centrerHauteur">
+								<div class="text-center centrerHauteur">
 									<div class="profil">
 										<div><img src="images/images_front/profil.png" alt="image profil" class="imgProfilConnexion"></div>
 										<h3>Connexion</h3>
@@ -62,54 +66,50 @@
 													<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 													<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 												</div>
-												<div class="row align-items-center remember">
-													<input type="checkbox">
+												<div class="row align-items-center text-dark remember">
+													<input type="checkbox" class="text-dark">
 													Se souvenir de moi
+													<a href="#" class="link ml-3">Mot de passe oublié ?</a>
 												</div>
-												<div class="form-group">
-													<input type="submit" value="Se connecter" class="btn float-right couleurBoutonConnexion">
+												<div class="form-group mt-3">
+													<input type="submit" value="Se connecter" class="btn rounded-pill bgc-pink btnConnexion">
 												</div>
 											</form>
-										</div>
-									</div>
-									<div class="card-footer noCompte">
-										<div class="d-flex justify-content-center">
-											<a href="#" class="link">Mot de passe oublié?</a>
 										</div>
 									</div>
 								</div>
 							</form>
 						</div>
 
-						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
 
-		{# <form method="post">
-									{% if error %}
-										<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-									{% endif %}
-							
-									{% if app.user %}
-										<div class="mb-3">
-											You are logged in as
-											{{ app.user.username }},
-											<a href="{{ path('app_logout') }}">Logout</a>
-										</div>
-									{% endif %}
-							
-									<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-									<label for="inputEmail">Email</label>
-									<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-									<label for="inputPassword">Password</label>
-									<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-							
-									<input
-									type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"> #}
+	{# <form method="post">
+										{% if error %}
+											<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+										{% endif %}
+								
+										{% if app.user %}
+											<div class="mb-3">
+												You are logged in as
+												{{ app.user.username }},
+												<a href="{{ path('app_logout') }}">Logout</a>
+											</div>
+										{% endif %}
+								
+										<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+										<label for="inputEmail">Email</label>
+										<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+										<label for="inputPassword">Password</label>
+										<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+								
+										<input
+										type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"> #}
 
-	{#
+{#
 									        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
 									        See https://symfony.com/doc/current/security/remember_me.html
 									
@@ -120,11 +120,11 @@
 									        </div>
 									    #}
 
-		{# <button class="btn btn-lg btn-primary" type="submit">
-										Sign in
-									</button>
-								</form> #}
+	{# <button class="btn btn-lg btn-primary" type="submit">
+											Sign in
+										</button>
+									</form> #}
 
-	{% endblock %}
+{% endblock %}
 
-	{% block nav %}{% endblock %}
+{% block nav %}{% endblock %}
